fix: fixed swagger missing query param, and added responses for the recommend enpoint
