# docs/swagger.json
@@ -281,6 +281,18 @@
                         "schema": {
                             "$ref": "#/definitions/entity.RecommendationResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrorMessage"
+                        }
                     }
                 }
             }
